--- a/Apps/buglog/BugLog.Wpf/Controls/RepoSupport.xaml
+++ b/Apps/buglog/BugLog.Wpf/Controls/RepoSupport.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa5="http://schemas.fontawesome.com/icons/"
+             xmlns:uctl="clr-namespace:LagoVista.XPlat.WPF;assembly=LagoVista.XPlat.WPF.NetStd.Core"
              xmlns:local="clr-namespace:BugLog.Wpf.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -12,9 +13,11 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="32" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="64" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="130" />
         </Grid.ColumnDefinitions>
@@ -25,10 +28,12 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Button Width="32"  Height="32" BorderBrush="Transparent" Background="Transparent" Command="{Binding NewRepoCommand}">
-                <fa5:SvgAwesome Icon="Solid_Plus" Width="24" Height="24" />
-            </Button>
+            <uctl:IconButton IconName="Solid_Plus" Width="24" Height="24" Command="{Binding NewRepoCommand}" HorizontalAlignment="Right" />
 
+            <StackPanel >
+                <TextBlock Text="Current Repo:" FontWeight="Bold" />
+                <TextBlock Text="{Binding CurrentRepo.Name}" />
+            </StackPanel>
             <ListView Grid.Row="1" ItemsSource="{Binding Repos}" SelectedItem="{Binding EditRepo, Mode=TwoWay}"  >
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -40,7 +45,7 @@
             </ListView>
         </Grid>
 
-        <ListView ItemsSource="{Binding ConsoleLogOutput}" Background="Blue" Grid.Row="1" Grid.Column="1">
+        <ListView ItemsSource="{Binding ConsoleLogOutput}" Background="Blue" Grid.Row="1" Grid.Column="1" Margin="0,0,2,0">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -53,16 +58,50 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <StackPanel Grid.Column="2" Grid.Row="1">
-            <TextBlock Text="{Binding Task.TaskCode}" />
-            <Button Command="{Binding GitCommand}" CommandParameter="status" Style="{StaticResource CommandButton}" >GIT Status</Button>
-            <Button Command="{Binding GitCommand}" CommandParameter="branch" Style="{StaticResource CommandButton}" >Branch</Button>
-            <Button Command="{Binding GitCommand}" CommandParameter="create" Style="{StaticResource CommandButton}" >Create</Button>
-            <Button Command="{Binding GitCommand}" CommandParameter="rebasedev" Style="{StaticResource CommandButton}" >Rebase</Button>
-            <Button Command="{Binding GitCommand}" CommandParameter="squash" Style="{StaticResource CommandButton}" >Squash</Button>
-            <Button Command="{Binding GitCommand}" CommandParameter="commit" Style="{StaticResource CommandButton}" >Commit</Button>
-            <TextBox Text="{Binding CommitMessage}" TextWrapping="Wrap" Height="80" />
+        <ListView ItemsSource="{Binding StepOutput}" Background="Blue" Grid.Row="1" Grid.Column="2" Margin="2,0,0,0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{Binding .}" Foreground="Yellow" />
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Visibility="{Binding IsCurrentBranchConfigured, Converter={StaticResource VisibilityConverter}}" Orientation="Horizontal" HorizontalAlignment="Center">
+            <fa5:SvgAwesome Icon="Solid_Check" Foreground="Green" Width="32" Height="32"  />
+            <TextBlock Text="Branch Ready" FontSize="24" />
         </StackPanel>
+
+        <TextBlock TextWrapping="Wrap" Text="There does not appear to be a branch in the current repo for this ticket.  Make sure you have the correct repository selected have no outstanding changes and press Create Branch to continue." 
+                    Grid.Column="1" Grid.ColumnSpan="2" Visibility="{Binding IsCurrentBranchConfigured, Converter={StaticResource  InverseVisibilityConverter}}" />
+
+        <StackPanel Grid.Column="3" Grid.Row="1">
+            <TextBlock Text="Branch Name:" FontWeight="Bold" Margin="10,0,0,0" />
+            <TextBlock Text="{Binding TaskBranchName}" Margin="10,0,0,10" />
+            <Button Command="{Binding GitCommand}"  Visibility="{Binding IsCurrentBranchConfigured, Converter={StaticResource  InverseVisibilityConverter}}"
+                    CommandParameter="create" Style="{StaticResource CommandButton}" >Create</Button>
+
+
+            <Button Command="{Binding GitCommand}" CommandParameter="squash" Style="{StaticResource CommandButton}"
+                    Visibility="{Binding IsCurrentBranchConfigured, Converter={StaticResource VisibilityConverter}}">Squash</Button>
+
+            <Button Command="{Binding GitCommand}" CommandParameter="rebasedev" Style="{StaticResource CommandButton}" 
+                    Visibility="{Binding IsCurrentBranchConfigured, Converter={StaticResource VisibilityConverter}}">Rebase from Dev</Button>
+
+
+            <Button Command="{Binding GitCommand}" CommandParameter="rebasetest" Style="{StaticResource CommandButton}" 
+                    Visibility="{Binding IsCurrentBranchConfigured, Converter={StaticResource VisibilityConverter}}">Rebase from Test</Button>
+
+            <Button Margin="0,20,0,0"  Command="{Binding GitCommand}" CommandParameter="branch" Style="{StaticResource CommandButton}" >Show Branches</Button>
+            <Button Command="{Binding GitCommand}" CommandParameter="status" Style="{StaticResource CommandButton}" >GIT Status</Button>
+        </StackPanel>
+
+        <Button Grid.Row="2" Grid.Column="3"  Command="{Binding GitCommand}" CommandParameter="commit" Style="{StaticResource CommandButton}" >Commit</Button>
+        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding CommitMessage}" TextWrapping="Wrap" Height="80"/>
 
 
         <Grid Width="320" Height="300" Grid.ColumnSpan="3" Grid.RowSpan="2" Visibility="{Binding EditRepo, Converter={StaticResource VisibilityConverter}}" >
@@ -89,7 +128,7 @@
             </Grid>
 
             <TextBlock Text="Repository" Style="{StaticResource PopupTItle}" />
-            <Button Command="{Binding CancelRepoCommand}" Style="{StaticResource PopupCloseButton}" />
+            <uctl:IconButton Command="{Binding CancelRepoCommand}" Style="{StaticResource PopupCloseButton}" />
 
         </Grid>
     </Grid>
