--- a/Apps/buglog/BugLog.WPF/App.xaml
+++ b/Apps/buglog/BugLog.WPF/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cvt="clr-namespace:BugLog.Wpf.Converters"
              xmlns:fa5="http://schemas.fontawesome.com/icons/"
+            xmlns:uctl="clr-namespace:LagoVista.XPlat.WPF;assembly=LagoVista.XPlat.WPF.NetStd.Core"
     
              xmlns:local="clr-namespace:BugLog.Wpf"
              StartupUri="MainWindow.xaml">
@@ -39,19 +40,26 @@
             <Setter Property="Margin" Value="20,40,20,20" />
         </Style>
 
-        <Style TargetType="Button"  x:Key="PopupCloseButton">
+        <Style TargetType="uctl:IconButton"  x:Key="PopupCloseButton">
             <Setter Property="VerticalAlignment" Value="Top"></Setter>
             <Setter Property="HorizontalAlignment" Value="Right"></Setter>
             <Setter Property="Margin" Value="5" ></Setter>
             <Setter Property="Width" Value="24"/>
             <Setter Property="Height" Value="24" />
-            <Setter Property="Control.Template">
-                <Setter.Value>
-                    <ControlTemplate >
-                        <fa5:SvgAwesome Icon="Solid_WindowClose"  VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Width="16" Height="16" />
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+            <Setter Property="IconName" Value="Regular_WindowClose" />
+            <Setter Property="Background" Value="DarkGray" />
+            <Setter Property="Foreground" Value="White" />
+            <Style.Resources>
+                <Style TargetType="Border">
+                        <Setter Property="Background" Value="Blue"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Green" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+            </Style.Resources>
+      
         </Style>
 
         <Style TargetType="TextBox" >
