fixes for training session on 8.11.2022

--- a/Apps/buglog/BugLog.WPF/MainWindow.xaml
+++ b/Apps/buglog/BugLog.WPF/MainWindow.xaml
@@ -88,6 +88,8 @@
                 </ListView.ItemTemplate>
             </ListView>
             <StackPanel Grid.Column="1">
+                <uctl:IconButton IconName="Solid_Recycle" Command="{Binding RefreshTasksCommand}" HorizontalAlignment="Right" Width="24" Height="24" />
+
                 <TextBlock>Project</TextBlock>
                 <ComboBox ItemsSource="{Binding Projects}" SelectedItem="{Binding SelectedProjectFilter}"  />
                 <TextBlock>Status</TextBlock>
