--- a/Apps/LagoVista.Mobile.Devices/App.xaml
+++ b/Apps/LagoVista.Mobile.Devices/App.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:LagoVista.XPlat.Maui"
-             x:Class="LagoVista.XPlat.Maui.App">
+             xmlns:local="clr-namespace:LagoVista.Mobile.Devices"
+             x:Class="LagoVista.Mobile.Devices.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
