--- a/Apps/LagoVista.Mobile.Devices/Platforms/Windows/App.xaml
+++ b/Apps/LagoVista.Mobile.Devices/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="LagoVista.XPlat.Maui.WinUI.App"
+    x:Class="LagoVista.Mobile.Devices.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:LagoVista.XPlat.Maui.WinUI">
+    xmlns:local="using:LagoVista.Mobile.Devices.WinUI">
 
 </maui:MauiWinUIApplication>
