--- a/Apps/LagoVista.Mobile.Devices/AppShell.xaml
+++ b/Apps/LagoVista.Mobile.Devices/AppShell.xaml
@@ -10,7 +10,6 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:RootPage}"
+        ContentTemplate="{DataTemplate lib:SplashPage}"
         Route="welcome" />
-
 </Shell>
