--- a/src/LagoVista.XPlat.Maui/Form/FormView.xaml
+++ b/src/LagoVista.XPlat.Maui/Form/FormView.xaml
@@ -2,6 +2,7 @@
 <lgv:PageBase xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:lgv="clr-namespace:LagoVista.XPlat.Maui.Pages"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ctl="clr-namespace:LagoVista.XPlat.Maui.Form.Fields"
              x:Class="LagoVista.XPlat.Maui.Form.FormView">
     <Grid>
         <Grid.RowDefinitions>
@@ -13,7 +14,7 @@
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
-                    <Label Text="{Binding Label}"></Label>
+                     <ctl:FormFieldView Field="{Binding .}"></ctl:FormFieldView>
                 </ViewCell>
             </DataTemplate>
         </ListView.ItemTemplate>
